--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,19 @@
 body {
-    background-color: hsl(214, 47%, 23%)!important;
     font-family: 'Barlow Semi Condensed', sans-serif;
+    background: radial-gradient(circle 35em, hsl(214, 47%, 23%), hsl(237, 49%, 15%)) !important;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 header {
-    margin-left: 20em;
-    margin-right: 20em;
+    margin-left: 22em;
+    margin-right: 22em;
     margin-top: 2em;
-    margin-bottom: 5em;
     padding: 1em;
     padding-left: 1.3em;
-    border: 2px solid #fff;
+    border: 2px solid darkgray !important;
     border-radius: 0.5em;
-}
-
-row {
-    margin-right: 0;
-    margin-left: 0;
+    position: relative;
 }
 
 .marcador {
@@ -33,8 +30,8 @@ row {
     font-weight: 1000;
     font-size: 3em;
     color: hsl(217, 16%, 45%);
-    padding-left: 0.94em;
     margin-top: -0.2em;
+    text-align: center;
 }
 
 #score {
@@ -54,11 +51,13 @@ row {
     align-content: center !important;
     width: 23em;
     height: 23em;
+    margin-top: 7em;
 }
 
 .piedra {
-    border: 1.2em solid hsl(349, 71%, 52%);
+    border: 1.2em solid hsl(349, 70%, 56%);
     background-color: #fff;
+    box-shadow: 0px 10px 0px -2px hsl(349, 71%, 52%);
     border-radius: 50%;
     width: 10.5em;
     height: 10.5em;
@@ -66,21 +65,96 @@ row {
 }
 
 .papel {
-    border: 1.2em solid hsl(230, 89%, 62%);
+    border: 1.2em solid hsl(230, 89%, 65%);
+    box-shadow: 0px 10px 0px -2px hsl(230, 89%, 55%);
     background-color: #fff;
     border-radius: 50%;
     width: 10.5em;
     height: 10.5em;
     padding-top: 2.3em;
     margin-left: 0em;
+    margin-top: -2em;
 }
 
 .tijera {
-    border: 1.2em solid hsl(39, 89%, 49%);
+    border: 1.2em solid hsl(40, 84%, 53%);
+    box-shadow: 0px 10px 0px -2px hsl(30, 87%, 45%);
     background-color: #fff;
     border-radius: 50%;
     width: 10.5em;
     height: 10.5em;
     padding-top: 2.3em;
     margin-left: 3.6em;
+    margin-top: -2em;
+}
+
+.resultado {
+    margin-left: 10em !important;
+    margin-right: 10em !important;
+    color: white;
+    margin-top: -5em;
+}
+
+#resultado_parcial {
+    margin-left: 15em !important;
+    margin-top: -2em !important;
+    margin-right: 15em !important;
+    color: white;
+}
+
+#piedra {
+    border: 1.7em solid hsl(349, 70%, 56%);
+    background-color: #fff;
+    box-shadow: 0px 10px 0px -2px hsl(349, 71%, 52%);
+    border-radius: 50%;
+    width: 15em;
+    height: 15em;
+    padding-top: 4em;
+}
+
+#papel {
+    border: 1.7em solid hsl(230, 89%, 65%);
+    box-shadow: 0px 10px 0px -2px hsl(230, 89%, 55%);
+    background-color: #fff;
+    border-radius: 50%;
+    width: 15em;
+    height: 15em;
+    padding-top: 4em;
+}
+
+#tijera {
+    border: 1.7em solid hsl(40, 84%, 53%);
+    box-shadow: 0px 10px 0px -2px hsl(30, 87%, 45%);
+    background-color: #fff;
+    border-radius: 50%;
+    width: 15em;
+    height: 15em;
+    padding-top: 4em;
+}
+
+#nada {
+    background-color: hsla(238, 48%, 15%, 0.548);
+    border-radius: 50%;
+    width: 11em;
+    height: 11em;
+    padding-top: 4em;
+    margin-left: 2em;
+}
+
+.tu_y_pc {
+    font-family: 'Barlow Semi Condensed', sans-serif !important;
+    font-size: 1.2em;
+    color: #fff !important;
+}
+
+.col_normal {
+    text-align: center;
+    align-self: center;
+}
+
+.col_ganador {
+    padding: 5em;
+    margin-top: 3em;
+    border-radius: 50%;
+    background: repeating-radial-gradient(circle at center, hsla(214, 47%, 23%, 0.795), hsla(214, 47%, 23%, 0.603), hsla(214, 47%, 23%, 0.493) 15%);
 }
